--- a/metadata.yaml
+++ b/metadata.yaml
@@ -30,6 +30,7 @@ subjects:
 - !lcsh 'Mammals -- North America'
 - !lcc 'QH'
 - !lcsh 'Rabbits'
+- GITenberg
 title: Comments on the Taxonomy and Geographic Distribution of Some North American
   Rabbits
 url: http://www.gutenberg.org/ebooks/28874
